deploy-yaml/project/monitor/deploy-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: course-monitor-deployment
  name: course-monitor-deployment
  namespace: course-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-monitor-deployment
  strategy: { }
  template:
    metadata:
      labels:
        app: course-monitor-deployment
    spec:
      # 拉取镜像需要使用到的secret
      imagePullSecrets:
        - name: course-image-account-secret
      containers:
        - env:
            # 运行时环境，引用一开始创建的configmap，值为prod
            - name: SPRING_PROFILES_ACTIVE
              valueFrom:
                configMapKeyRef:
                  name: spring-profile-cm
                  key: spring-profiles-active
            # 设置一些jvm调优参数
            - name: JAVA_OPTION
              value: "-Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:+PrintGCDetails -Xloggc:/var/log/devops-example.gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:+DisableExplicitGC"
            - name: XMX
              value: "64m"
            - name: XMS
              value: "64m"
            - name: XMN
              value: "32m"
          image: registry.cn-hangzhou.aliyuncs.com/course-cloud/course-cloudmonitor:1.0.0
          name: monitor
          # 存活探针
          livenessProbe:
            # 发送http get请求到9100端口的/actuator/health路径检查pod是否健康
            httpGet:
              path: /actuator/health
              port: 9100
              scheme: HTTP
            # pod初始化完毕20秒之后再开始
            initialDelaySeconds: 20
            # 之后每10秒进行一次健康检查
            periodSeconds: 10
          ports:
            - containerPort: 9100
          resources: { }

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: course-monitor-deployment
  name: course-monitor-svc
  namespace: course-cloud
spec:
  ports:
    - port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    app: course-monitor-deployment
  type: ClusterIP
